<resources>
    <string name="itindr">ITindr</string>
    <string name="itindr_phrase">Ты найдешь того, кто поревьюит твой код</string>
    <string name="register">Зарегистрироваться</string>
    <string name="come">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="password_twice">Повторить пароль</string>
    <string name="back">Назад</string>
    <string name="authorization">Авторизация</string>
    <string name="tell_about">Расскажи о себе</string>
    <string name="indicate_interests">Укажи интересы</string>
    <string name="interests">Интересы</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="name">Имя</string>
    <string name="about_yourself">О себе</string>
    <string name="save">Сохранить</string>
    <string name="python">Python</string>
    <string name="django">Django</string>
    <string name="rest">REST</string>
    <string name="swift">Swift</string>
    <string name="react_js">React JS</string>
    <string name="kotlin">Kotlin</string>
    <string name="git">Git</string>
    <string name="unity">Unity</string>
    <string name="net">.NET</string>
    <string name="sql">SQL</string>
    <string name="clean">Clean Architecture</string>
    <string name="uml">UML</string>
    <string name="search">Поиск</string>
    <string name="people">Люди</string>
    <string name="chat">Чаты</string>
    <string name="profile">Профиль</string>
    <string name="refusal">Отказ</string>
    <string name="like">Лайк</string>
    <string name="edit">Редактировать</string>
    <string name="edit_profile">Редактирование</string>
    <string name="delete">Удалить</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="write">Написать сообщение</string>
    <string name="item_save">Данные успешно сохранены</string>
    <string name="error">Ошибка</string>
    <string name="update">Загрузка</string>
    <string name="error_email">Проверьте введенный email</string>
    <string name="error_pwd">Пароли не совпадают</string>
</resources>