<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tellabout.TellAboutActivity">

    <ImageView
        android:id="@+id/imageViewLogoTell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="118dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_small" />

    <TextView
        android:id="@+id/textViewTellAbout"
        style="@style/Title.Start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_button"
        android:text="@string/tell_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoTell" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="50dp"
        android:text="@string/choose_photo"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewTellAbout" />

    <EditText
        android:id="@+id/editText2"
        style="@style/Hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:background="@drawable/selector_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingVertical="18dp"
        android:paddingLeft="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTellAbout"
        app:srcCompat="@drawable/selector_background" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:background="@drawable/selector_background"
        android:ems="10"
        android:hint="@string/about_yourself"
        android:inputType="textLongMessage"
        android:paddingVertical="64dp"
        android:paddingLeft="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        style="@style/Title.Start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_button"
        android:text="@string/indicate_interests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/button"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_button"
        android:letterSpacing="0"
        android:paddingVertical="18dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/margin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        >

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/python"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/back_chip"
            app:chipStrokeColor="@color/pink"
            app:chipMinHeight="25dp"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/django"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipMinHeight="25dp"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/pink"
            app:chipMinHeight="25dp"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swift"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipMinHeight="25dp"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/react_js"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipMinHeight="25dp"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kotlin"
            android:textColor="@color/pink"
            app:chipMinHeight="25dp"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipMinHeight="25dp"
            android:text="@string/git"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unity"
            android:textColor="@color/pink"
            app:chipMinHeight="25dp"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipMinHeight="25dp"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            app:chipMinHeight="25dp"
            android:layout_height="wrap_content"
            android:text="@string/sql"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:textColor="@color/pink"
            app:chipMinHeight="25dp"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uml"
            app:chipMinHeight="25dp"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp" />


    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>