<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.AuthorizationActivity">

    <TextView
        android:id="@+id/textViewRegister"
        style="@style/Title.Start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_twice"
        android:layout_marginEnd="@dimen/margin_button"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="@dimen/margin_twice"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_small" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:background="@drawable/selector_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="18dp"
        android:paddingStart="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="18dp"
        android:paddingStart="@dimen/padding"
        android:ems="10"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:hint="@string/password"
        android:background="@drawable/selector_background"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        style="@style/Hint"
        android:layout_width="0dp"
        android:paddingVertical="18dp"
        android:paddingStart="@dimen/padding"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:ems="10"
        android:hint="@string/password_twice"
        android:background="@drawable/selector_background"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/buttonBack"
        style="@style/Button.Ghoast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_button"
        android:paddingVertical="15dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegistration"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_button"
        android:paddingVertical="15dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>