<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootLayout"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">

    <ImageView
        android:id="@+id/imageViewLogoSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="@dimen/margin_twice"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_small" />

    <Button
        android:id="@+id/buttonBackRegister"
        style="@style/Button.Ghoast"
        android:layout_width="0dp"
        app:backgroundTint="@null"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="@dimen/padding_vertical"
        android:text="@string/back"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"/>

    <Button
        android:id="@+id/buttonComeRegister"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        app:backgroundTint="@null"
        android:paddingVertical="@dimen/padding_vertical"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRegistration"
        style="@style/Title.Start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_twice"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoSmall" />

    <EditText
        android:id="@+id/editTextEmailAddressReg"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@drawable/selector_background"
        android:ems="10"
        android:hint="@string/email"
        android:paddingVertical="@dimen/padding_vertical_hint"
        android:paddingStart="@dimen/padding"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration" />

    <EditText
        android:id="@+id/editTextTextPassworReg"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@drawable/selector_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingVertical="@dimen/padding_vertical_hint"
        android:paddingStart="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressReg" />

    <EditText
        android:id="@+id/editTextTextPasswordTwice"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@drawable/selector_background"
        android:hint="@string/password_twice"
        android:paddingVertical="@dimen/padding_vertical_hint"
        android:paddingStart="@dimen/padding"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassworReg" />
</androidx.constraintlayout.widget.ConstraintLayout>