<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarControls"
        style="@style/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:paddingStart="16dp"
        android:paddingEnd="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left_line"
        app:title="@string/profile">

        <TextView
            style="@style/ToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="18dp" />
    </com.google.android.material.appbar.MaterialToolbar>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCloseUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarControls">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/imageViewAvatarProfile"
                android:layout_width="206dp"
                android:layout_height="206dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/shape_photo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_user_shape" />

            <TextView
                android:id="@+id/textViewNameProfile"
                style="@style/Title.Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="100dp"
                android:text="@string/update"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewAvatarProfile" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="37dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile" />

            <TextView
                android:id="@+id/textViewAboutMySelf"
                style="@style/Hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="37dp"
                android:text="@string/update"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupProfile" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <Button
        android:id="@+id/buttonCloseUser"
        style="@style/Button.Ghoast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="fill"
        android:paddingVertical="@dimen/padding_vertical"
        android:paddingLeft="50dp"
        android:text="@string/refusal"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_close"
        app:iconTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLikeUser"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLikeUser"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/padding"
        android:gravity="fill"
        android:paddingVertical="@dimen/padding_vertical"
        android:paddingLeft="50dp"
        android:text="@string/like"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCloseUser" />

</androidx.constraintlayout.widget.ConstraintLayout>